# dbs2

./: Dockerfile
backend/: .gitignore  Cargo.toml
backend/migrations/2020-07-12-123215_initial/: down.sql  up.sql
backend/src/: config.rs  database.rs  db.rs  entities.rs  errors.rs  extractors.rs  helpers.rs  main.rs  network.rs  routes.rs  schema.rs  server.rs
backend/src/actions/: mod.rs  not_found.rs  root.rs
backend/src/actions/music/: create.rs  delete.rs  list.rs  mod.rs  update.rs
backend/src/dao/: mod.rs  music.rs
backend/src/handlers/: auth.rs  mod.rs  music.rs  series.rs  wanted.rs
backend/src/models/: mod.rs  music.rs  series.rs  wanted.rs
backend/src/tests/: helpers.rs  mod.rs
frontend/: .gitignore  index.html  mockConfig.js  package-lock.json  package.json  tsconfig.json  vue.config.js  webpack.config.js
frontend/mocks/: musicResponse0.js  musicResponse1.js  musicResponse2.js  seriesResponse.json  seriesResponse0.js  seriesResponse1.js  seriesResponse2.js  wantedResponse.js
frontend/src/: App.vue  app.vue  index.ts  main.js  networking.js  router.js  router.ts
frontend/src/api/: SeriesResponse.ts
frontend/src/assets/: controller.scss  modal.scss
frontend/src/components/: edit-field.vue  hello.ts  loader.vue  menu.ts  music-form.vue  music-item.vue  paginator.vue  router.ts  series-form.vue  series-item.vue  wanted-item.vue
frontend/src/controllers/: books.js  books.ts  home.js  home.ts  music.js  music.ts  music.vue  series.vue  wanted.js  wanted.ts  wanted.vue
frontend/tests/unit/components/: edit-field.spec.js  (+7 more)
(+4 files in other folders)
