[package]
name = "dbs2"
version = "0.0.1"
authors = ["erzapito"]
edition = "2018"

[dependencies]
#tokio = { version = "0.2", features = ["macros"] }

actix-files = "0.3.0"
actix-rt = "1.0"
actix-web = "3.0.1"
diesel = { version = "1.4.4", features = ["mysql","sqlite"] }
dotenv = "0.15.0"
log = "0.4.8"
log4rs = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
