[package]
name = "dbs2"
version = "0.0.1"
authors = ["erzapito"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-cors="0.2.0"
actix-files = "0.2.1"
actix-rt = "1"
actix-web = "2"
derive_more = "0.15"
diesel = { version = "1.4.0", features = ["chrono", "mysql", "sqlite", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
lazy_static = "1.4"
listenfd = "0.3"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.8.0"
validator_derive = "0.8.0"

[dev-dependencies]
actix-http-test = "0.2.0"

[features]
mysql = []
sqlite = []
default = ["mysql"]
